# plonk-with-plookup

./: Cargo.toml  readme.md
src/: circuit.rs  lib.rs  prover.rs  setup.rs  table.rs  utils.rs  verifier.rs
src/plookup/: mod.rs
src/plookup/lookup/: lookup.rs  mod.rs
src/plookup/lookup/table/: four_bits.rs  generic.rs  mod.rs
src/plookup/multiset/: mod.rs  multiset.rs  multiset_equality.rs
