[package]
name = "plonk-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ark-poly = { version = "0.4.0-alpha", default-features = false }
ark-test-curves = { version = "0.4.0-alpha", default-features = false, features = [ "bls12_381_curve"] }
ark-std = { version = "0.4.0", default-features = false }
ark-ff = { version = "0.4.0", default-features = false }
ark-ec = { version = "0.4.0", default-features = false }
rand= "0.8.5"
sha2 = "0.10.6"
serde = "1.0.152"
bincode = "1.3.3"
num-traits = { version = "0.2", default-features = true }

